--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     margin: 0;
     box-sizing: border-box;
     color: white;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 .wrapper{
     background-image: linear-gradient(160deg, #112d4e 0%, #3f72af 100%);
@@ -149,6 +149,10 @@ div[data-Weather_showing_screen ]{
     text-align: center;
     padding: 2rem;
 }
+#weather_des_icon{
+    width: 90px;
+    height: 90px;
+}
 #temp{
     font-size: 2.7rem;
     text-align: center;
@@ -159,10 +163,83 @@ div[data-Weather_showing_screen ]{
 div[data-404_screen]{
     text-align: center;
 }
+#error_img_404{
+    width:200px;
+     height:200px;
+}
+
+
+
+ /* Media queries  */
+
+ @media (max-width:500px) {
+    body{
+        overflow-y: auto;
+    }
+    h1{
+        font-size: 1.2rem;
+    }
+
+    .container{
+        font-size: .8rem;
+        width: 80%;
+        gap: 1rem;
+    }
+ 
+    .media_grant_access_screen{
+        text-align: center;
+    }
+    
+    #middleArea{
+        padding: .5rem;
+    }
+    
+
+    .parameter-container{
+      font-size: .7rem;
+      display: flex;
+      flex-wrap: wrap;
+    }
+/* 
+    .parameter{
+        height: 6rem;
+    } */
+
+    div[data-switching_tab]{
+        margin-top:1.5rem ;
+    }
+
+#temp,.clear_sky{
+    font-size: 1.3rem;
+}
+
+#weather_des_icon{
+    width: 50px;
+    height: 50px;
+}
+.parameter img{
+    width:30px;
+    height:30px;
+}
+
+#error_img_404{
+    width:120px;
+     height:120px;
+}
+
+
+div[data-404_screen]{
+    text-align: center;
+    margin-top: 3rem;
+}
 
 
 
 
+
+
+
+ }
 
 
 
